--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.44.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.0",
     "sass": "^1.32.8",
     "standard-version": "^9.2.0",
